# small-mcp-server-demos

calculator/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
calculator/.cursor/: mcp.json
calculator/.gemini/: settings.json
calculator/src/calculator/: __main__.py  evaluator.py  test_evaluator.py
search-api/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
search-api/.cursor/: mcp.json
search-api/.gemini/: settings.json
search-api/src/search_api/: __init__.py
