[project]
name = "calculator"
version = "0.1.0"
description = "Example calculator MCP server"
readme = "README.md"
authors = [
    { name = "Apiwat Chantawibul", email = "billiska@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.3",
    "pytest>=9.0.2",
]

[project.scripts]
calculator = "calculator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
cache_dir = "./workdir"

