[project]
name = "search-api"
version = "0.1.0"
description = "Example MCP server calling external search API"
readme = "README.md"
authors = [
    { name = "Apiwat Chantawibul", email = "billiska@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.3",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
]

[project.scripts]
search-api = "search_api:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
cache_dir = "./workdir"

